--- a/_courses/CS601.md
+++ b/_courses/CS601.md
@@ -1,24 +1,22 @@
 ---
 layout: course
-title: "CS102"
-name: Introduction to Programming
-instructor: Prof. Nikhil hegde
+title: "CS601"
+name: Software Development and Scientific Computing
+instructor: Prof. Nikhil Hegde
 department: Computer Science and Engineering
 type: Theory
 semestertype: Full
-level: UG
-prerequisites:
+level: UG and PG
+prerequisites: CS201
 email: nikhilh@iitdh.ac.in
 lectures: 3
 tutorials: 0
 practicals: 0
 credits: 6
-description: Introduction to dprogramming languages like C, and coding skills.
+description: Introduction to data structures, data types, analysis of algorithms and their manipulation.
 syllabus: "Introduction: data structures, abstract data types, analysis of algorithms. Creation and manipulation of data structures: arrays, lists, stacks, queues, trees, heaps, hash tables, balanced trees tries, graphs. Algorithms forsorting and searching, order statistics, depth-first and breadth-first search shortest paths and minimum spanning tree."
 references: 
     - Introduction to Algorithms, 3rd edition, by T.Cormen, C. Leiserson, R. Rivest, C. Stein, MIT Press and McGraw-Hill, 2009.
     - Data structures and algorithms in C++, by Michael T. Goodrich, Roberto Tamassia, and David M. Mount Wiley, 2004.
 permalink: /:title
 ---
-
-
