searched courses cards

--- a/_courses/CS102.md
+++ b/_courses/CS102.md
@@ -2,7 +2,7 @@
 layout: course
 title: "CS102"
 name: Introduction to Programming
-instructor: Prof. Nikhil hegde
+instructor: Nikhil hegde
 department: Computer Science and Engineering
 type: Theory
 semestertype: Full
