--- a/_courses/CS601.md
+++ b/_courses/CS601.md
@@ -2,7 +2,7 @@
 layout: course
 title: "CS601"
 name: Software Development and Scientific Computing
-instructor: Prof. Nikhil Hegde
+instructor: Nikhil Hegde
 department: Computer Science and Engineering
 type: Theory
 semestertype: Full
