--- a/_courses/cs201.md
+++ b/_courses/cs201.md
@@ -2,7 +2,7 @@
 layout: course
 title: "CS201"
 name: Data Structure and Algorithms
-instructor: Prof. Koteshwar Rao Kondepu
+instructor: Koteshwar Rao Kondepu
 department: Computer Science and Engineering
 type: Theory
 semestertype: Full
