--- a/_courses/EE202.md
+++ b/_courses/EE202.md
@@ -22,31 +22,31 @@ Part 2: Need for Non-linearity for amplification
 Single stage amplifiers, frequency response, Current mirror circuits, Differential amplifier.
 "
 references:
-    - '"1) J.V.Wait"
-    "L.P.Huelsman and GA Korn"
-    "Introduction to Operational Amplifier theory and applications"
-    "2nd edition"
-    "McGraw Hill"
-    "New York"
-    "1992.
-2) J. Millman and A. Grabel"
-    "Microelectronics"
-    "2nd edition"
-    "McGraw Hill"
-    "1988.
-3) Ramakant Gayakwad"
-    "Op-amps and Linear Integrated Circuit"
-    "4th edition"
-    "Pearson"
-    "2000.
-4) P. Horowitz and W. Hill"
-    "The Art of Electronics"
-    "2nd edition"
-    "Cambridge University Press"
-    "1989.
-5) Behzad Razavi "
-    "“Fundamentals of Microelectronics,” John Wiley"
-    "2013."'
+    - '1) J.V.Wait
+    L.P.Huelsman and GA Korn
+    Introduction to Operational Amplifier theory and applications
+    2nd edition
+    McGraw Hill
+    New York
+    1992.
+2) J. Millman and A. Grabel
+    Microelectronics
+    2nd edition
+    McGraw Hill
+    1988.
+3) Ramakant Gayakwad
+    Op-amps and Linear Integrated Circuit
+    4th edition
+    Pearson
+    2000.
+4) P. Horowitz and W. Hill
+    The Art of Electronics
+    2nd edition
+    Cambridge University Press
+    1989.
+5) Behzad Razavi 
+    “Fundamentals of Microelectronics,” John Wiley
+    2013.'
 permalink: /title/
 categories: ee 202 ug
 ---
